@@ -3,6 +3,17 @@
 class tx_additionalscheduler_utils
 {
 	/**
+	 * Define all the reports
+	 *
+	 * @return array
+	 */
+
+	public function getTasksList() {
+		$tasks = array('savewebsite', 'translationupdate', 'exec', 'clearcache');
+		return $tasks;
+	}
+
+	/**
 	 * Send a email using t3lib_htmlmail
 	 */
 
@@ -13,18 +24,23 @@ class tx_additionalscheduler_utils
 		$mail->useBase64();
 		$mail->charset = 'iso-8859-1';
 		$mail->subject = $subject;
+
 		// from
 		$mail->from_email = $fromEmail;
 		$mail->from_name = $fromName;
+
 		// replyTo
 		$mail->replyto_email = $fromEmail;
 		$mail->replyto_name = $fromName;
+
 		// recipients
 		$mail->setRecipient($to);
+
 		// add Plain
 		if ($type == 'plain') {
 			$mail->addPlain($message);
 		}
+
 		// add HTML
 		if ($type == 'html') {
 			$mail->theParts['html']['content'] = $message;
@@ -36,15 +52,18 @@ class tx_additionalscheduler_utils
 			$mail->substHREFsInHTML();
 			$mail->setHtml($mail->encodeMsg($mail->theParts['html']['content']));
 		}
+
 		// add Files
 		if (!empty($files)) {
 			foreach ($files as $file) {
 				$mail->addAttachment($file);
 			}
 		}
+
 		// send
 		$mail->setHeaders();
 		$mail->setContent();
+
 		return $mail->sendtheMail();
 	}
 }
