@@ -22,7 +22,7 @@
  *  This copyright notice MUST APPEAR in all copies of the script!
  ***************************************************************/
 
-class tx_additionalscheduler_exec extends tx_scheduler_Task
+class tx_additionalscheduler_clearcache extends tx_scheduler_Task
 {
 
 	/**
@@ -33,40 +33,11 @@ class tx_additionalscheduler_exec extends tx_scheduler_Task
 	 */
 
 	public function execute() {
-		require_once(PATH_site . 'typo3conf/ext/additional_scheduler/classes/class.tx_additionalscheduler_utils.php');
-
-		// exec SH
-		if (substr($this->path, 0, 1) == '/') {
-			$cmd = $this->path;
-		} else {
-			$cmd = PATH_site . $this->path;
-		}
-
-		$return = shell_exec($cmd . ' 2>&1');
-
-		// mail
-		$mailTo = $this->email;
-		$mailSubject = '[additional_scheduler] : ' . $GLOBALS['LANG']->sL('LLL:EXT:additional_scheduler/locallang.xml:task.exec.name');
-		$mailBody = $cmd . LF . LF . $return;
-
-		if (empty($this->email) !== TRUE) {
-			tx_additionalscheduler_utils::sendEmail($mailTo, $mailSubject, $mailBody, 'plain', $this->emailfrom, $this->emailfrom, 'utf-8');
-		}
-
+		$GLOBALS['BE_USER']->user['admin'] = 1;
+		$tce = t3lib_div::makeInstance('t3lib_TCEmain');
+		$tce->start(Array(), Array());
+		$tce->clear_cacheCmd('all');
 		return TRUE;
-	}
-
-	/**
-	 * This method is designed to return some additional information about the task,
-	 * that may help to set it apart from other tasks from the same class
-	 * This additional information is used - for example - in the Scheduler's BE module
-	 * This method should be implemented in most task classes
-	 *
-	 * @return	string	Information to display
-	 */
-
-	public function getAdditionalInformation() {
-		return $this->path;
 	}
 
 }
