@@ -22,45 +22,19 @@
  *  This copyright notice MUST APPEAR in all copies of the script!
  ***************************************************************/
 
-class tx_additionalscheduler_translationupdate_fields implements tx_scheduler_AdditionalFieldProvider
+class tx_additionalscheduler_clearcache_fields implements tx_scheduler_AdditionalFieldProvider
 {
 
 	public function getAdditionalFields(array &$taskInfo, $task, tx_scheduler_Module $parentObject) {
-
-		if (empty($taskInfo['additionalscheduler_lang'])) {
-			if ($parentObject->CMD == 'edit') {
-				$taskInfo['additionalscheduler_lang'] = $task->lang;
-			} else {
-				$taskInfo['additionalscheduler_lang'] = '';
-			}
-		}
-
-		$additionalFields = array();
-
-		$fieldID = 'task_lang';
-		$fieldCode = '<input type="text" name="tx_scheduler[additionalscheduler_lang]" id="' . $fieldID . '" value="' . $taskInfo['additionalscheduler_lang'] . '" size="50" />';
-		$additionalFields[$fieldID] = array(
-			'code' => $fieldCode,
-			'label' => 'LLL:EXT:additional_scheduler/locallang.xml:lang',
-			'cshKey' => 'additional_scheduler',
-			'cshLabel' => $fieldID
-		);
-
-		return $additionalFields;
 	}
 
 	public function validateAdditionalFields(array &$submittedData, tx_scheduler_Module $parentObject) {
-		$result = TRUE;
-		if (empty($submittedData['additionalscheduler_lang'])) {
-			$parentObject->addMessage($GLOBALS['LANG']->sL('LLL:EXT:additional_scheduler/locallang.xml:langerror'), t3lib_FlashMessage::ERROR);
-			$result = FALSE;
-		}
-		return $result;
+		return TRUE;
 	}
 
 	public function saveAdditionalFields(array $submittedData, tx_scheduler_Task $task) {
-		$task->lang = $submittedData['additionalscheduler_lang'];
 	}
+
 }
 
 ?>
